Align beaconId with requirements
