# config/swagger.json
@@ -72,7 +72,7 @@
         }
       }
     },
-    "/beacons/{beaconId}": {
+    "/beacons/{beaconMinorId}": {
       "get": {
         "tags": [
           "beacons"
@@ -85,7 +85,7 @@
         ],
         "parameters": [
           {
-            "name": "beaconId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of beacon that needs to be fetched",
             "required": true,
@@ -121,7 +121,7 @@
         ],
         "parameters": [
           {
-            "name": "beaconId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of beacon that needs to be deleted",
             "required": true,
@@ -143,7 +143,7 @@
         }
       }
     },
-    "/beacons/{beaconId}/visits": {
+    "/beacons/{beaconMinorId}/visits": {
       "get": {
         "tags": [
           "beacons",
@@ -157,7 +157,7 @@
         ],
         "parameters": [
           {
-            "name": "beaconId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of beacon whose visits you wish to see",
             "required": true,
@@ -194,7 +194,7 @@
         ],
         "parameters": [
           {
-            "name": "beaconId",
+            "name": "beaconMinorId",
             "in": "path",
             "description": "ID of beacon that needs to be deleted",
             "required": true,
@@ -514,7 +514,7 @@
     "Beacon": {
       "type": "object",
       "properties": {
-        "beaconId": {
+        "beaconMinorId": {
           "type": "string",
           "description": "also known as the minor id"
         },
@@ -555,7 +555,7 @@
         "visitId": {
           "type": "string"
         },
-        "beaconId": {
+        "beaconMinorId": {
           "type": "string",
           "description": "also known as the minor id"
         },
